# zml

./: --  --config=remote  .bazelignore  .bazelrc  .bazelrc-examples  .bazelrc-zml  .bazelversion  .gitignore  .llm_chat_history  .nvim.lua  .vscode  AGENTS.md  BUILD.bazel  CTX.md  DEV.md  MODULE.bazel  PostSPMDPassesExecutionDuration.txt  README.md  RESEARCH.md  bench_aws.sh  bench_file.sh  bench_s3.sh  build.sh  build.zig  build.zig.zon  convert.py  devenv.nix  devenv.yaml  flux_klein_notebook_embeds.npy  flux_klein_notebook_result.npy  flux_klein_notebook_text_ids.npy  flux_klein_zml_result.npy  flux_klein_zml_result.npy.npy  flux_output_transpose_test.txt  followup.md  index.json  install.sh  main.py  main.zig  mlp_results_llama.json  (+23 more)
async/: BUILD.bazel  async.zig  asyncio.zig  channel.zig  coro.zig  coro_base.zig  executor.zig  meta.zig  stack.zig  threaded.zig  zigcoro.zig
async/asm/: coro_aarch64.s  coro_riscv64.s  coro_x86_64.s  coro_x86_64_windows.s
bazel/: BUILD.bazel  bazel.zig  cc_import.bzl  dpkg.bzl  http_aea_archive.bzl  http_deb_archive.bzl  huggingface.bzl  metal_toolchain.BUILD.bazel  patchelf.bzl  pybootstrap.bzl  runfiles.bzl  simple_repository.bzl  strip_debug.bzl  swig.bzl  zig.bzl  zig_index.json  zig_proto_library.bzl  zig_srcs.bzl
bazel/stamp/: BUILD.bazel  genstamp.c  stamp.zig
bazel/zig_toolchain_config/: BUILD.bazel
bazel/zig_toolchains/: BUILD.bazel
examples/: .bazelignore  .bazelrc  .nvim.lua  MODULE.bazel  bazel.sh  platform_mappings  zls.build.json
examples/acestep/: BUILD.bazel  acedit.zig  aceemb.zig  aceenc.zig  acellm.zig  acevae.zig  inference.zig  main.zig
examples/attention/: BUILD.bazel  kernel_unified_attention_2d_ptr.ttir  main.zig
examples/benchmark/: BUILD.bazel  main.zig
examples/benchmark-profiler/: BUILD.bazel  README.md  main.zig
examples/callback/: BUILD.bazel  main.zig
examples/conv_compile_repro/: BUILD.bazel  main.zig
examples/custom_call/: BUILD  BUILD.bazel  main.zig  playground.zig
examples/detokenization/: BUILD.bazel  algebra.zig  graph.zig  inference.zig  kmeans.zig  llm.zig  main.zig  model.zig  old.zig  oldquant.zig  productq.zig  quantization.zig  quantized.zig  sampling.zig  saveload.zig  svd.zig  tokens.zig  truncated.zig
examples/dflash/: BUILD.bazel  common.zig  dflash_compare_activations.zig  dflash_model.zig  llama_model.zig  main.zig  model.md  sharegpt_acceptance_prompts.md
examples/dflash_benchmark/: BUILD.bazel  README.md  SPEC.md  agent.md  datasets.zig  dflash_model.zig  main-baseline-comparison.zig  main-dry-run.zig  main.zig  research_improve_tau.md  stats.zig
examples/dflash_benchmark_gemma4/: BUILD.bazel  README.md  common.zig  datasets.zig  dflash_model.zig  main-baseline-comparison.zig  main-dry-run.zig  stats.zig
examples/dflash_gemma4/: BUILD.bazel  chat_template.zig  common.zig  dflash_model.zig  main.zig  model.md  spec.md
examples/dma/: BUILD.bazel  main.zig  main2.zig  main3.zig  main4.zig  main5.zig  main6.zig  main7.zig  main8.zig  main9.zig
examples/dspark/: BUILD.bazel  common.zig  dspark_model.zig  main.zig
examples/flashinfer_moe_kernel_test/: BUILD.bazel  main.zig
examples/flux/: BUILD.bazel  autoencoder_kl_flux2.zig  flux2_transformer2d_model.zig  interactive.zig  main.zig  modeling_qwen3.zig  save_npy_impl.zig  scheduling_flow_match_euler_discrete.zig  tokenization_qwen2.zig  tokenization_qwen2_fast.zig  tools.zig  utils.zig
examples/flux2/: BUILD.bazel  autoencoder_kl_flux2.zig  config.zig  flux2_transformer2d_model.zig  interactive.zig  main.zig  modeling_qwen3.zig  pipeline.zig  tokenization_qwen2_fast.zig  tools.zig  utils.zig
examples/gather_mlp/: BUILD.bazel  main.zig
examples/gpt_oss/: BUILD.bazel  GptOss.zig  README.md  gpt_oss copy.zig  gpt_oss.py  gpt_oss.zig  gpt_oss_2.zig  (+5 more)
ffi/: BUILD.bazel  ffi.zig  zig_allocator.h  zig_allocator.zig  zig_slice.h  zig_slice.zig
flags/: BUILD.bazel
jinja2/: BUILD.bazel  README.md  environment.zig  expr.zig  generate_expected.bzl  lib.zig  python_best_practice.md  requirements.in  requirements.lock.txt  template.zig  value.zig
mlir/: BUILD.bazel  c.h  llama.zig  main.zig  mlir.h  mlir.zig  mlirx.cc  mlirx.h  register.cc  registry.zig  writer.zig
pjrt/: BUILD.bazel  dlfcn.h  ffi.zig  layout.zig  pjrt.zig  profiler.zig  xspace_to_json.zig
py/: BUILD.bazel  empty.py  py_binary.bzl  pymain.zig
runtimes/: BUILD.bazel  README.md  runtimes.zig
smi/: BUILD.bazel  collector.zig  main.zig  platform.zig  sandbox.zig  sysfs.zig  worker.zig
stdx/: BUILD.bazel  Io.zig  bounded_array.zig  crypto.zig  debug.zig  flags.zig  fmt.zig  fs.zig  io.zig  json.zig  math.zig  meta.zig  posix.zig  process.zig  queue.zig  segmented_list.zig  signature.zig  small.zig  stdx.zig  time.zig  unicode.zig
testing/: .bazelrc  .nvim.lua  MODULE.bazel  platform_mappings  zls.build.json
tools/: BUILD.bazel  analyze_trace.py  buildifier.sh  check_eol_attributes.sh  hf.py  hf_requirements.lock.txt  nsys.sh  rgb_to_xterm.py  rocprofv3.sh  traceme_lib.cc  workspace_status.sh  xspace_to_perfetto.cc  xspace_to_perfetto.h  xspace_to_perfetto_lib.cc  zig.sh  zig_build.py  zls.sh  zml_utils.py
translate-c/: BUILD.bazel
upb/: BUILD.bazel  upb.h  upb.zig
vfs/: BUILD.bazel  base.zig  example.zig  file.zig  gcs.zig  hf.zig  http.zig  s3.zig  vfs.zig
zml/: BUILD.bazel  Io.zig  Sharding.zig  aio.zig  attention.zig  buffer.zig  callback.zig  constants.zig  context.zig  cublas_grouped_gemm.zig  custom_call.zig  decode_chain.zig  dtype.zig  exe.zig  ffi.zig  floats.zig  helpers.zig  hostbuffer.zig  io.zig  kernel.zig  logo.zig  mem.zig  meta.zig  mlir.zig  mlirx.zig  module.zig  moe.zig  nn.zig  ops.zig  partitioning.zig  pjrtx.zig  platform.zig  posix.h  posix.zig  profiler.zig  quant.zig  quantization.zig  safetensors.zig  shape.zig  sharding.zig  (+10 more)
zml2/: BUILD.bazel  buffer.zig  constants.zig  dtype.zig  exe.zig  floats.zig  io.zig  main.zig  main_io.zig  meta.zig  mlirx.zig  module.zig  nn.zig  ops.zig  pjrtx.zig  platform.zig  safetensors.zig  shape.zig  slice.zig  tensor.zig  test_runner.zig  testing.zig  zml.zig
(+1418 files in other folders)
