load("//third_party/zls:zls_completion.bzl", "zls_completion")

zls_completion(
    name = "completion",
    visibility = ["//visibility:public"],
    deps = [
        "//bin/zml-smi",
        "//examples/llm",
        "//examples/mnist",
        "//examples/sharding",
        "//examples/repro",
        "//stdx",
        "//zml",
        "//zml/tokenizer/iree",
    ],
)

platform(
    name = "rbe_platform",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        # ubuntu:22.04 has GNU C Library (Ubuntu GLIBC 2.35-0ubuntu3.10)
        # But apparently not in this docker://ubuntu:22.04 image?
        "@llvm//constraints/libc:gnu.2.28",
        "@bazel_tools//tools/cpp:clang",
    ],
    exec_properties = {
        "container-image": "docker://ubuntu:22.04",
        "OSFamily": "Linux",
    },
    visibility = ["//visibility:public"],
)
