load("@rules_zig//zig/translate-c:toolchain.bzl", "translate_c_toolchain")
load("@rules_zig//zig/zls:zls_completion.bzl", "zls_completion")

alias(
    name = "zig-build-prepare",
    actual = "//tools:zig-build-prepare",
    visibility = ["//visibility:public"],
)

alias(
    name = "translate-c",
    actual = "@translate-c//:translate-c",
    visibility = ["//visibility:public"],
)

translate_c_toolchain(
    name = "translate_c_toolchain_impl",
    runtime_modules = [
        "@translate-c//:c_builtins",
        "@translate-c//:helpers",
    ],
    translate_c = "@translate-c//:translate-c",
)

toolchain(
    name = "translate_c_toolchain",
    target_settings = ["@rules_zig//zig/config/use_standalone_translate_c:enabled"],
    toolchain = ":translate_c_toolchain_impl",
    toolchain_type = "@rules_zig//zig/translate-c:toolchain_type",
    visibility = ["//visibility:public"],
)

zls_completion(
    name = "completion",
    visibility = ["//visibility:public"],
    deps = [
        "//bin/zml-smi",
        "//examples/llm",
        "//examples/mnist",
        "//examples/sharding",
        "//stdx",
        "//zml",
        "//zml/tokenizer/iree",
    ],
)

platform(
    name = "rbe_platform",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        # ubuntu:22.04 has GNU C Library (Ubuntu GLIBC 2.35-0ubuntu3.10)
        # But apparently not in this docker://ubuntu:22.04 image?
        "@llvm//constraints/libc:gnu.2.28",
        "@bazel_tools//tools/cpp:clang",
    ],
    exec_properties = {
        "container-image": "docker://ubuntu:22.04",
        "OSFamily": "Linux",
    },
    visibility = ["//visibility:public"],
)
