module(
    name = "zml",
)

bazel_dep(name = "abseil-cpp", version = "20250814.1", repo_name = "com_google_absl")
bazel_dep(name = "bazel_lib", version = "3.2.2")
bazel_dep(name = "aspect_rules_py", version = "1.8.4")
bazel_dep(name = "bazel_skylib", version = "1.9.0")

## Needed by iree
bazel_dep(name = "libbacktrace", version = "1.0.0-20250926-7939218")
bazel_dep(name = "patchelf", version = "0.18.0.bcr.1")
bazel_dep(name = "pcre2", version = "10.45")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "33.6", repo_name = "com_google_protobuf")
single_version_override(
    module_name = "protobuf",
    version = "33.6",  # important, until grpc-cpp is fixed
)

bazel_dep(name = "pybind11_bazel", version = "2.13.6")
bazel_dep(name = "re2", version = "2025-11-05", repo_name = "com_googlesource_code_re2")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_distroless", version = "0.6.2")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "rules_rs", version = "0.0.44")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_zig", version = "0.12.2")
git_override(
    module_name = "rules_zig",
    commit = "b65a2bb460b9dbcbcc3231ba648c3c1a266c4eb5",
    remote = "https://github.com/zml/rules_zig.git",
)

bazel_dep(name = "tar.bzl", version = "0.9.0")
bazel_dep(name = "llvm", version = "0.7.1")
bazel_dep(name = "jsoncpp", version = "1.9.6", repo_name = "jsoncpp_git")
bazel_dep(name = "with_cfg.bzl", version = "0.14.4")
bazel_dep(name = "grpc", version = "1.74.0")

bazel_dep(name = "buildifier_prebuilt", version = "8.5.1", dev_dependency = True)

# BSDTar toolchains
tar_toolchains = use_extension("@tar.bzl//tar:extensions.bzl", "toolchains")
use_repo(
    tar_toolchains,
    "bsd_tar_toolchains_darwin_amd64",
    "bsd_tar_toolchains_darwin_arm64",
    "bsd_tar_toolchains_linux_amd64",
    "bsd_tar_toolchains_linux_arm64",
    "bsd_tar_toolchains_windows_amd64",
    "bsd_tar_toolchains_windows_arm64",
)
###

### Zig toolchain
zig = use_extension("@rules_zig//zig:extensions.bzl", "zig")
zig.index(file = "//bazel:zig_index.json")
zig.toolchain(
    translate_c = "@translate-c",
    zig_version = "0.16.0",
)
zig.mirrors(urls = [
    "https://pkg.machengine.org/zig",
    "https://zigmirror.hryx.net/zig",
    "https://zig.linus.dev/zig",
    "https://zig.squirl.dev",
    "https://zig.florent.dev",
    "https://zig.mirror.mschae23.de/zig",
    "https://zigmirror.meox.dev",
    "https://ziglang.freetls.fastly.net",
    "https://zig.tilok.dev",
    "https://zig-mirror.tsimnet.eu/zig",
    "https://zig.karearl.com/zig",
    "https://pkg.earth/zig",
    "https://fs.liujiacai.net/zigbuilds",
    "https://ziglang.org/builds/",
])
use_repo(zig, "zig_toolchains")

register_toolchains("@rules_zig//zig/target:all")

register_toolchains("@zig_toolchains//:all")
###

### LLVM Bootstrapped toolchains
register_toolchains("@llvm//toolchain:all")
###

uv = use_extension("@rules_python//python/uv:uv.bzl", "uv", dev_dependency = True)
uv.configure(version = "0.9.30")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")
use_repo(python, "python_3_12", "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip_neuron = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip_neuron.parse(
    download_only = True,
    extra_pip_args = [
        "--abi=cp312",
        "--implementation=cp",
        "--python-version=312",
        "--platform=linux_x86_64",
        "--platform=manylinux2014_x86_64",
        "--platform=manylinux_2_27_x86_64",
        "--platform=manylinux_2_28_x86_64",
        "--platform=manylinux_2_29_x86_64",
    ],
    hub_name = "neuron_py_deps",
    python_version = "3.12",
    requirements_lock = "//platforms/neuron:requirements.lock.txt",
    target_platforms = ["linux_x86_64"],
)
use_repo(pip_neuron, "neuron_py_deps")

# For downloading models
pip.parse(
    download_only = True,
    hub_name = "huggingface_hub",
    python_version = "3.12",
    requirements_lock = "//tools/hf:requirements.lock.txt",
)
use_repo(pip, "huggingface_hub")

pip.parse(
    download_only = True,
    hub_name = "xprof_nightly",
    python_version = "3.12",
    requirements_lock = "//tools/xprof:requirements.lock.txt",
)
use_repo(pip, "xprof_nightly")

# For Triton generation
pip.parse(
    download_only = True,
    hub_name = "triton_py_deps",
    python_version = "3.12",
    requirements_lock = "//zml/attention/triton:requirements.lock.txt",
)
use_repo(pip, "triton_py_deps")

cpu = use_extension("//platforms/cpu:cpu.bzl", "cpu_pjrt_plugin")
use_repo(cpu, "libpjrt_cpu_darwin_amd64", "libpjrt_cpu_darwin_arm64", "libpjrt_cpu_linux_amd64")

cuda = use_extension("//platforms/cuda:cuda.bzl", "cuda_packages")
use_repo(cuda, "cuda_nvml_dev", "libpjrt_cuda")

rocm = use_extension("//platforms/rocm:rocm.bzl", "rocm_packages")
use_repo(rocm, "amd-smi-lib", "hipblaslt", "libdrm-amdgpu-amdgpu1", "libdrm2-amdgpu", "libpjrt_rocm", "rocblas")

tpu = use_extension("//platforms/tpu:tpu.bzl", "tpu_packages")
use_repo(tpu, "libpjrt_tpu")

neuron = use_extension("//platforms/neuron:neuron.bzl", "neuron_packages")
use_repo(neuron, "aws-neuronx-collectives", "aws-neuronx-runtime-lib", "libgomp1", "libpjrt_neuron", "zlib1g")

zls = use_extension("//third_party/zls:zls_toolchain.bzl", "zls_toolchains")
use_repo(zls, "zls_toolchains")

register_toolchains("@zls_toolchains//:all")

non_module_deps = use_extension("//:third_party/non_module_deps.bzl", "non_module_deps")
use_repo(non_module_deps, "arocc", "cloud_accelerator_diagnostics", "com_google_sentencepiece", "flashattn", "iree", "libvaxis", "linenoise", "mnist", "org_swig_swig", "stb", "translate-c", "uucode", "xla", "zigimg")

xla = use_extension("//third_party/xla:xla.bzl", "xla")
use_repo(
    xla,
    "com_github_grpc_grpc",
    "eigen_archive",
    "farmhash_archive",
    "farmhash_gpu_archive",
    "llvm-raw",
    "local_config_cuda",
    "local_config_remote_execution",
    "local_config_rocm",
    "local_config_sycl",
    "local_config_tensorrt",
    "ml_dtypes_py",
    "python_version_repo",
    "rules_ml_toolchain",
    "shardy",
    "stablehlo",
    "sycl_configure",
    "sycl_configure_ext",
    "triton",
    "tsl",
)

llvm = use_extension("//third_party/xla:llvm.bzl", "llvm")
llvm.configure()
use_repo(llvm, "llvm-project")

rs_toolchains = use_extension("@rules_rs//rs/experimental/toolchains:module_extension.bzl", "toolchains")
rs_toolchains.toolchain(
    edition = "2024",
    version = "1.94.0",
)
use_repo(rs_toolchains, "default_rust_toolchains")

register_toolchains("@default_rust_toolchains//:all")

crate = use_extension("@rules_rs//rs:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lock = "//zml/tokenizer/hftokenizers:Cargo.lock",
    cargo_toml = "//zml/tokenizer/hftokenizers:Cargo.toml",
    platform_triples = [
        "aarch64-apple-darwin",
        "x86_64-apple-darwin",
        "aarch64-unknown-linux-gnu",
        "x86_64-unknown-linux-gnu",
    ],
    use_experimental_platforms = True,
)
use_repo(crate, "crates")

apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")
apt.install(
    name = "apt_cuda",
    lock = "//platforms/cuda:packages.lock.json",
    manifest = "//platforms/cuda:packages.yaml",
)
use_repo(apt, "apt_cuda")

apt.install(
    name = "apt_rocm",
    lock = "//platforms/rocm:packages.lock.json",
    manifest = "//platforms/rocm:packages.yaml",
)
use_repo(apt, "apt_rocm")

apt.install(
    name = "apt_neuron",
    lock = "//platforms/neuron:packages.lock.json",
    manifest = "//platforms/neuron:packages.yaml",
)
use_repo(apt, "apt_neuron")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_cc_debian12",
    digest = "sha256:eccec5274132c1be0ce5d2c8e6fe41033e64af5e987ccee9007826e4c012069d",
    image = "gcr.io/distroless/cc-debian12",
    platforms = ["linux/amd64"],
)
oci.pull(
    name = "debian_12",
    digest = "sha256:bc960ef50e6feed90686c593361df158517556ed1d2d98e5d1df3724024e0f49",
    image = "docker.io/library/debian:12",
    platforms = ["linux/amd64"],
)
use_repo(
    oci,
    "debian_12",
    "debian_12_linux_amd64",
    "distroless_cc_debian12",
    "distroless_cc_debian12_linux_amd64",
)

single_version_override(
    module_name = "grpc-java",
    version = "1.74.0",
)
