load("@rules_zig//zig:defs.bzl", "zig_library")

zig_library(
    name = "async",
    srcs = [
        "asyncio.zig",
        "channel.zig",
        "coro.zig",
        "coro_base.zig",
        "executor.zig",
        "stack.zig",
    ],
    extra_srcs = glob(["asm/*.s"]),
    main = "async.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//stdx",
        "@libxev//:xev",
    ],
)
