load("@rules_zig//zig:defs.bzl", "zig_library", "zig_test")
load("@zml//bazel:zig_srcs.bzl", "zig_srcs")


zig_library(
    name = "async",
    srcs = [
        "asyncio.zig",
        "channel.zig",
        "coro.zig",
        "coro_base.zig",
        "executor.zig",
        "stack.zig",
    ],
    extra_srcs = glob(["asm/*.s"]),
    main = "async.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//stdx",
        "@libxev//:xev",
    ],
)

zig_test(
    name = "test",
    deps = [":async"],
    testonly = False,
)

zig_srcs(
    name = "sources",
    zig_bin = ":test",
)
